test/functions/bradc/paramThis/funParamThis.good
funParamThis.chpl:9: error: unresolved call 'int(64).foo("hi")'
funParamThis.chpl:1: note: this candidate did not match: param int.foo()
funParamThis.chpl:9: note: because call includes 1 argument
funParamThis.chpl:1: note: but function can only accept 0 arguments
funParamThis.chpl:9: note: other candidates are:
funParamThis.chpl:5: note:   int.foo()
